--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ body {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 650px;
+    height: 800px;
 
     .imgMainPresentacion {
         width: 643px;
@@ -153,8 +153,7 @@ body {
     align-items: center;
 }
 
-.contLutenteCloudImg {
-    
+.contLutenteCloudImg {  
     width: 80%;
 }
 
@@ -598,8 +597,9 @@ body {
     gap: 20px;
   }
   .img-container img {
-    width: 500px;
-    height: 250px;
+    /*1366 515*/
+    width: 600px;
+    height: 226px;
     background-color: #87A0E2;
     border-radius: 16px;
     position: absolute;
@@ -608,35 +608,6 @@ body {
     transition-duration: 0.3s; 
     transition-timing-function: ease-out; 
   }
-  /*.img-container img:hover {
-    width: 600px;
-    height: 500px;
-  }*/
-  /*.arrows {
-    width: 900px;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    z-index: 100;
-  }
-  .arrows svg {
-    width: 60px;
-    height: 60px;
-    position: relative;
-    fill: rgb(8, 8, 8);
-    opacity: 0.8;
-    cursor: pointer;
-  }
-  
-  .arrows svg:active {
-    transform: scale(0.9);
-    opacity: 1;
-    transition-property: transform, opacity; 
-    transition-duration: 0.3s; 
-    transition-timing-function: ease-out; 
-  }*/
-  
-
 /*Section Form*/
 
 .main-header-form{
@@ -655,4 +626,83 @@ body {
     margin-top: 100px;
     width: 100%;
     height: 100%;
+}
+
+.form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    
+    
+    width: 500px;
+}
+
+.form ul {
+    margin-top: 20px;
+    list-style: none;
+    width: 100%;
+}
+
+.listaForm {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.inputForm  {
+    width: 400px;
+    height: 20px;
+    background-color: rgba(244, 179, 14, 0);
+    border: none;
+    border-bottom: 1px solid rgb(244, 177, 14);
+    margin-left: 15px;
+}
+
+.inputForm:focus {
+    border-bottom: 1px solid black;
+    outline: none;
+}
+
+.inputForm::placeholder {
+    color: black;
+    font-family: 'Raleway', sans-serif;
+    font-size: large;
+    font-weight: bold;
+}
+
+.inputForm::after {
+    content: " <- EXCITING!";
+    color: green;
+  }
+
+.listaForm textarea {
+    margin-top: 10px;
+    height: 50px;
+}
+
+.iconForm {
+    width: 50px;
+    height: 50px;
+}
+
+.buttonForm {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 150px;
+    height: 30px;
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.buttonForm:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    transition: all 0.6s;
+
 }
