--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ body {
 }
 
 /*Header*/
+.respmenu{
+    display: none;
+}
+
 .main-header {
     position: fixed;
     display: flex;
@@ -92,18 +96,13 @@ body {
 /*Logo Menu*/
 .contLogoLat {
     display: flex;
-    
 }
-
-/* .contLogoLat img {
-    width: 200px;
-    height: 30px;
-} *//*lutente blanco opcional*/
-
-
   
 
 /*Contenedor Titulo Lutene*/
+.sectionLutenteCloud {
+    width: 100%;
+}
 
 .contImgPresentacion {
     display: flex;
@@ -160,6 +159,7 @@ body {
 .contLutenteCloudImg p{
     margin-left: 13%;
     font-size: x-large;
+    width: 80%;
 }
 
 .buttonComienzaAhora{
@@ -173,6 +173,7 @@ body {
     border: 0px;
     margin-top: 30px;
     margin-left: 13%;
+    margin-bottom: 50px;
     cursor: pointer;
     font-size: x-large;
 }
@@ -193,8 +194,6 @@ body {
 .sectionModulos {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 90.8%;
 }
 
 .contTituloSection {
@@ -204,7 +203,6 @@ body {
 }
 
 .tituloSection{
-    text-shadow: 3px 2px 3px rgba(0,0,0,0.4);
     margin: 50px 0px 50px 50px;
     font-size: 70px;
     font-weight: bold;
@@ -212,10 +210,8 @@ body {
 
 .cont_Modulos{
     display: flex;
-    width: 90%;
-    height: 520px;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .cont_Modulos_Elegir{
@@ -223,7 +219,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 530px;
     z-index: 999;
 }
 
@@ -241,7 +236,7 @@ body {
     border: 1px solid black;
     background-color: black;
     cursor: pointer;
-    font-size: 20px;
+    font-size: large;
     /* box-shadow: 0px 0px 31px 8px rgba(0,0,0,0.6);
     -webkit-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.6); Fijate que le saque el shadow a los botones*/
 }
@@ -250,6 +245,7 @@ body {
     top: 30px;
     right: -20px;
 }
+
 #bton2 {
     top: 160px;
     right: 160px;
@@ -268,65 +264,55 @@ body {
     right: -200px;
 }
 
+#modulo1 {
+    display: flex;
+}
+
+#modulo2 {
+    display: none;
+}
+
+#modulo3 {
+    display: none;
+}
+
+#modulo4 {
+    display: none;
+}
+
+#modulo5 {
+    display: none;
+}
+
 .cont_Modulos_Boton:hover {
     animation: 0s;
-    background-color: rgb(244, 177, 14);
     color: black;
     transition: all 0.7s;
     transform: scale(1.1);
 }
 
-#modulo1 {
+.contenedorModulo{
     display: flex;
     flex-direction: column;
-    background-color: rgba(243,174,41,255);
+    align-items: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    width: 550px;
 }
 
-#modulo2 {
-    display: none;
-    flex-direction: column;
-    background-color: rgba(247,199,120,255);
+.tituloContenedorModulo {
+    font-size: xxx-large;
+    background-color: black;
+    padding: 5px 30px 5px 30px;
+    color: rgb(244, 177, 14);
+    margin: 10px;
 }
 
-#modulo3 {
-    display: none;
-    flex-direction: column;
-    background-color: rgba(249,218,168,255);
-}
-
-#modulo4 {
-    display: none;
-    flex-direction: column;
-    background-color: rgba(254,234,208,255);
-}
-
-#modulo5 {
-    display: none;
-    flex-direction: column;
-    background-color: rgba(216,155,42,255);
-}
-
-.cont_Modulos_Mod {
-    height: 60%;
-    width: 60%;
-    border-left: 10px solid black;
-    border-radius: 20px;
-    box-shadow: 0px 0px 19px -1px rgba(0,0,0,0.53);
-}
-
-.cont_Modulos_Titulo {
+.textoModulo {
+    margin: 10px;
     font-size: xx-large;
-    margin-left: 20px;
-}
-
-.cont_Modulos_Text {
-    font-size: xx-large;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.cont_Modulos img {
-    height: 450px;
+    text-align: center;
+    line-height: 50px;
 }
 
 /*Finaliza Modulos*/
@@ -338,9 +324,25 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10px;
 }
 
+#ProcesosEspacio {
+    margin-top: 150px;
+    height: 0px;
+    position: absolute;
+}
+/*
+.contPorcesosTotalResponsive{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+
+.contPorcesosTotalResponsive img{
+    width: 80%;
+}
+*/
 .contPorcesosTotal {
     width: 1200px;
     display: flex;
@@ -461,17 +463,15 @@ body {
 
 .ProcesosText{
     display: flex;
-    flex-direction: column;
     align-items: center;
     border-radius: 20px;
-    margin-top: 100px;
+    margin-top: 60px;
     height: 400px;
     color: black;
     font-family: 'Raleway', sans-serif;
-    width: 30%;
+    width: 1000px;
     height: 420px;
-    /*background-color: rgba(244, 179, 14, 0.75);
-    border: 5px solid black;*/
+    --animate-duration: 1.5s;
 }
 
 .ProcesosText p{
@@ -482,28 +482,30 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .ProcesoText {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*width: 50%;*/
     height: 100%;
     width: 100%;
 }
 
 .ProcesoText h1 {
     margin-top: 10px;
-    font-size: xx-large;
+    font-size: xxx-large;
+    margin: 25px;
 }
 
 .ProcesoText p {
     padding: 0px;
-    margin-top: 20px;
+    margin-top: 0px;
     margin-left: 30px;
     margin-right: 30px;
     font-size: x-large;
+    font-weight: bold;
     text-align: center;
     line-height: 25px;
 }
@@ -550,18 +552,49 @@ body {
     margin-top: 10px;
 }
 
+.contBeneficios{
+    display: flex;
+}
+
 .listaBeneficios {
     margin-left: 50px;
+    margin-top: 70px;
     list-style: none;
     font-size: x-large;
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
 }
 
+.imgsBeneficios {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.imagenBeneficios {
+    width: 500px;
+    position: absolute;
+}
+
+#imgBeneficio1{
+    right: 200px;
+    margin-top: -70px;
+    z-index: 900;
+}
+
+#imgBeneficio2{
+    right: 50px;
+    margin-top: 150px;
+}
+
+#imgBeneficio3{
+    right: 0px;
+    margin-top: -100px;
+}
 
 /*Section Videos*/
 .sectionVideos {
-    margin-top: 100px;
+    margin-top: 350px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -569,45 +602,134 @@ body {
     justify-content: center
 }
 
+.sectionVideos h2{
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: xx-large;
+}
+
 .sectionVideos iframe {
+    margin-top: 30px;
     border: 3px solid rgb(244, 177, 14);
 }
 
 /* Footer */
 .footerLutente {
-    height: 300px;
+    display: flex;
+    align-items: center;
     background-color: rgb(244, 177, 14);
     margin-top: 100px;
+    height: 300px;
 }
 
-
-/*Carrousel*/
-.carrousel{
-    width: 100%;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-  }
-  .img-container {
+.cont1Footer {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 50%;
+    height: 100%;
+    margin-left: 40px;
+}
+
+.cont1Footer a{
+    text-align: none;
+}
+
+.cont1Footer div{
+    display: flex;
+}
+
+
+.cont1Footer p{
+    margin-left: 5px;
+    margin-top: 30px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: larger;
+}
+
+
+.lutenteFooter {
+    margin-top: 15px;
+    width: 300px;
+}
+
+.lutenteFooter:hover {
+    background-color: rgb(248, 247, 247);
+    border-radius: 30px;
+}
+
+.buttonFooter {
+    width: 250px;
+    height: 50px;
+    background-color: black;
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: large;
+    border-radius: 20px;
+    border: 0px;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+.buttonFooter:hover {
+    color: rgb(244, 177, 14);
+}
+
+.iconFooter {
+    margin-top: 30px;
+    width: 50px;
+}
+
+.iconFooter:hover {
+    transform: scale(1.2);
+    transition: all 0.6s;
+}
+
+.redesFooter {
+    display: flex;
     align-items: center;
-    gap: 20px;
-  }
-  .img-container img {
-    /*1366 515*/
-    width: 600px;
-    height: 226px;
-    background-color: #87A0E2;
-    border-radius: 16px;
+    bottom: 0px;
+    justify-content: space-between;
+}
+
+/*.cont2Footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15px;
+    
+}
+
+.cont2Footer h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+}
+
+.empresasFooter {
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 30px;
+}
+
+.empresaFooter {
+    width: 100px;
+}
+
+.empresaFooter:hover {
+    transform: scale(1.1);
+    transition: all 0.6s;
+}*/
+
+.dispositivosFooter {
     position: absolute;
-    user-select: none;
-    transition-property: transform, opacity, zIndex, ; 
-    transition-duration: 0.3s; 
-    transition-timing-function: ease-out; 
-  }
+    width: 600px;
+    margin-bottom: 100px;
+    right: 0px;
+}
+
 /*Section Form*/
 
 .main-header-form{
@@ -632,8 +754,6 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    
-    
     width: 500px;
 }
 
@@ -672,11 +792,6 @@ body {
     font-weight: bold;
 }
 
-.inputForm::after {
-    content: " <- EXCITING!";
-    color: green;
-  }
-
 .listaForm textarea {
     margin-top: 10px;
     height: 50px;
@@ -705,4 +820,559 @@ body {
     border: 1px solid black;
     transition: all 0.6s;
 
+}
+
+
+
+@media (max-width: 1349px) {
+    body {
+        display: flex;
+        flex-direction: column;
+    }
+
+    /*Header*/
+    
+    .contLogoLat a img{
+        width: 200px;
+    }
+
+    .navigation a {
+        font-size: medium;
+        margin: 0px 15px;
+    }
+
+    .ingresoApp a {
+        font-size: medium;
+    }
+
+    /*Modulos + carrousel*/
+    .cont_Modulos{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .modulosTextos {
+        margin-top: 30px;
+    }
+
+    .ProcesosText{
+        margin-top: 150px;
+        width: 700px;
+    }
+
+    /*Procesos*/
+
+    .contPorcesosTotal {
+        width: 840px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-image: url('../img/elementosParaWeb42.png');
+        background-size: 100%;
+        
+    }
+
+    #ProcesosEspacio {
+        margin-top: 200px;
+        height: 0px;
+        position: absolute;
+    }
+    
+    .pruebaProcesos{
+        display: flex;
+        margin-top: 50px;
+        background-color: black;
+        padding: 56px;
+    }
+    
+    .pruebaProcesos2{
+        padding: 56px;
+        margin-top: 0px;
+    }
+
+    .linkProceso {
+        margin-left: 47.6px;
+        margin-right: 47.6px;
+    }
+    
+    .linkProceso2 {
+        margin-left: 47.6px;
+        margin-right: 47.6px;
+    }
+    
+    .pPrueba{
+        color: rgb(244, 177, 14);
+        font-family: 'Raleway', sans-serif;
+        font-weight: bold;
+        transform: rotate(45deg);
+        padding: 0px;
+        margin: 0px;
+        position: absolute;   
+        font-size: large;
+        text-align: center;
+    }
+    
+    .pPrueba2{
+        color: rgb(244, 177, 14);
+        font-family: 'Raleway', sans-serif;
+        font-weight: bold;
+        transform: rotate(225deg);
+        padding: 0px;
+        margin: 0px;
+        position: absolute;
+        font-size: large;
+        text-align: center;
+    }
+
+
+    /*Textos Procesos*/
+
+    .ProcesosText{
+        margin-top: 20px;
+    }
+
+    .ProcesoText h1 {
+        text-align: center;
+    }
+
+    /*Beneficios*/
+
+    .contBeneficios{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contBeneficios ul {
+        margin-top: 0px;
+    }
+
+    .listaBeneficios {
+        margin-left: 0px;
+        margin-top: 70px;
+        font-size: x-large;
+        font-weight: bold;
+    }
+
+    .listaBeneficios li {
+        margin-top: 10px;
+    }
+
+    .imgsBeneficios {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+
+    .imagenBeneficios {
+        width: 400px;
+        position: absolute;
+    }
+
+    #imgBeneficio1{
+        right: 35%;
+        z-index: 900;
+        margin-top: 25px;
+    }
+
+    #imgBeneficio2{
+        right: 15%;
+        margin-top: 100px;
+    }
+
+    #imgBeneficio3{
+        right: 40%;
+        margin-top: 200px;
+    }
+
+    /*sectionVideos*/
+
+    .sectionVideos {
+        margin-top: 500px;
+    }
+
+    .sectionVideos iframe{
+        margin: 0px;
+    }
+}
+
+@media (max-width: 945px) {
+    /*Header responsive*/
+    .navigation {
+        display: none;
+    }
+
+    .ingresoApp {
+        display: none;
+    }
+
+    .nav{
+        display: flex;
+        height: 76.656px;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
+    .respmenu {
+        display: flex;
+        margin-right: 10px;
+    }
+
+    .contenedorHambur{
+        margin-right: 30px;
+    }
+
+    .navigationResponsive {
+        display: none;
+        margin: 0px;
+        position: absolute;
+        right: 110px;
+        
+    }
+    .ingresoAppResp{
+        display: none;
+        margin: 0px;
+        position: absolute;
+        right: 10px;
+    }
+    .respmenu ul {
+        padding: 0px;
+    }
+    .respmenu li {
+        list-style: none;
+    }
+    .respmenu a {
+        color: rgb(248, 247, 247);
+        text-decoration: none;
+        display: block;
+        padding: 10px 20px;
+        border-bottom: 2px solid rgb(244, 177, 14);
+        background: black;
+        font-family: 'Raleway', sans-serif;
+        font-weight: bold;
+    }
+
+    /*Section Lutente Cloud*/
+
+    .buttonComienzaAhora{
+        width: 350px;
+        height: 50px;
+        background-color: black;
+        color: white;
+        font-family: 'Raleway', sans-serif;
+        font-weight: bold;
+        border-radius: 20px;
+        border: 0px;
+        margin-top: 30px;
+        margin-left: 13%;
+        margin-bottom: 50px;
+        cursor: pointer;
+        font-size: large;
+    }
+}
+
+@media (max-width: 840px) {
+
+    .tituloSection{
+        font-size: xxx-large;
+    }
+
+    .buttonComienzaAhora{
+        width: 300px;
+    }
+
+    /*Modulos*/
+
+    .tituloContenedorModulo{
+        font-size: xx-large;
+    }
+
+    /*Procesos section*/
+
+    .contPorcesosTotal {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-image: none;
+        
+    }
+
+    .pruebaProcesos{
+        display: flex;
+        margin-top: 50px;
+        background-color: black;
+        padding: 56px;
+    }
+
+    .contProcesos {
+        justify-content: center;
+    }
+
+    .contProcesos2 {
+        position: static;
+        margin-top: 0px;
+    }
+    
+    .pruebaProcesos2{
+        padding: 56px;
+        margin-top: 0px;
+    }
+
+    .linkProceso {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    
+    .linkProceso2 {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    /*Procesos text*/
+
+    .ProcesosText {
+        margin-top: 0px;
+        width: 100%;
+    }
+
+    /*Video*/
+    .sectionVideos iframe {
+        width: 400px;
+    }
+
+    .footerLutente {
+        display: none;
+    }
+}
+
+@media (max-width: 600px) {
+    /*section LutenteCloud*/
+
+    .imgPresentacion {
+        width: 300px;
+    }
+
+    .contLutenteCloudImg{
+        width: 55%
+    }
+
+    .contLutenteCloudImg p{
+        font-size: large;
+        text-align: left;
+
+    }
+
+    .buttonComienzaAhora {
+        width: 80%;
+        font-size: medium;
+    }
+
+    /*Modulos*/
+
+    .imgModulos {
+        width: 400px;
+    }
+
+    #bton1 {
+        top: 20px;
+        right: -20px;
+    }    
+    #bton2 {
+        top: 120px;
+        right: 110px;
+    }
+    #bton3 {
+        top: 280px;
+        right: 60px;
+    }
+    #bton4 {
+        top: 280px;
+        right: -105px;
+    }
+    #bton5 {
+        top: 120px;
+        right: -155px;
+    }
+
+    .modulosTextos {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .tituloContenedorModulo {
+        font-size: x-large;
+    }
+
+    .textoModulo {
+        font-size: x-large;
+    }
+
+    /*Ventas*/
+
+
+    .pruebaProcesos{
+        display: flex;
+        margin-top: 50px;
+        background-color: black;
+        padding: 30px 30px 40px 40px;
+    }
+
+    .pPrueba {
+        position: absolute;
+        margin: 40px 40px 20px 20px;
+        width: 80%;
+        font-size: x-small;
+    }
+    .pPrueba2 {
+        position: absolute;
+        margin: 40px 40px 20px 20px;
+        width: 80%;
+        font-size: x-small;
+    }
+
+    .contProcesos {
+        justify-content: center;
+    }
+
+    .contProcesos2 {
+        position: static;
+        margin-top: 0px;
+    }
+    
+    .pruebaProcesos2{
+        padding: 30px 30px 40px 40px;
+        margin-top: 0px;
+    }
+
+    .linkProceso {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    
+    .linkProceso2 {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    /*Textos ventas*/
+    .imgProcesos {
+        width: 150px;
+        height: 150px;
+    }
+    .ProcesosText {
+        width: 90%;
+    }
+    .ProcesoText h1{
+        font-size: x-large;
+    }
+    .ProcesoText p{
+        font-size: large;
+    }
+
+    /*Beneficios*/ 
+
+    .imgsBeneficios {
+        width: 100%;
+    }
+
+    .listaBeneficios{
+        margin-top: 0px;
+        width: 85%;
+        padding: 0px;
+        margin: 0px 0px 0px 10px;
+    }
+
+    .listaBeneficios li{
+        font-size: medium;
+    }
+
+
+    .sectionVideos {
+        margin-top: 100px;
+    }
+}
+
+@media (max-width: 480px) {
+    .tituloSection {
+        font-size: xx-large;
+        margin-left: 25px;
+    }
+
+    /*lutenteCloud*/
+
+    .contLutenteCloud {
+        flex-direction: column;
+    }
+
+    .contLutenteCloudImg {
+        width: 100%;
+    }
+
+    .imgDevice {
+        width: 80%;
+    }
+
+    /*Modulos*/
+    .imgModulos {
+        width: 300px;
+    }
+
+    .cont_Modulos_Boton{
+        width: 35px;
+        height: 35px;
+    }
+
+    #bton1 {
+        top: 20px;
+        right: -15px;
+    }    
+    #bton2 {
+        top: 90px;
+        right: 85px;
+    }
+    #bton3 {
+        top: 210px;
+        right: 45px;
+    }
+    #bton4 {
+        top: 210px;
+        right: -75px;
+    }
+    #bton5 {
+        top: 90px;
+        right: -115px;
+    }
+
+    .contenedorModulo {
+        width: 90%;
+    }
+
+    .textoModulo{
+        font-size: larger;
+    }
+
+    /*Ventas*/
+
+    .ProcesosText {
+        flex-direction: column-reverse;
+    }
+
+    .sectionVideos h2{
+        font-size: x-large;
+    }
+
+    .sectionVideos iframe {
+        width: 300px;
+        height: 200px;
+    }
+}
+
+@media (max-width: 480px) {
+    .contProcesosText {
+        margin-top: 25px;
+    }
 }
