--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ body {
 }
 
 /*Header*/
+/*267-97*/
 .respmenu{
     display: none;
 }
@@ -96,6 +97,10 @@ body {
 /*Logo Menu*/
 .contLogoLat {
     display: flex;
+}
+
+.contLogoLat img {
+    width: 267px;
 }
   
 
@@ -594,7 +599,7 @@ body {
 
 /*Section Videos*/
 .sectionVideos {
-    margin-top: 350px;
+    margin-top: 50px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -609,7 +614,9 @@ body {
 }
 
 .sectionVideos iframe {
-    margin-top: 30px;
+    width: 800px;
+    height: 500px;
+    margin-top: 10px;
     border: 3px solid rgb(244, 177, 14);
 }
 
@@ -692,6 +699,10 @@ body {
     align-items: center;
     bottom: 0px;
     justify-content: space-between;
+}
+
+.redesFooter a {
+    
 }
 
 /*.cont2Footer {
