--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
     width: 100%;
     margin: 0px;
     background-color: rgb(248, 247, 247);
+    overflow-x: Hidden; 
 }
 
 .espacioParaHref{
@@ -577,6 +578,10 @@ body {
     height: 100%;
 }
 
+.imgsBeneficios {
+    width: 800px;
+}
+
 .imagenBeneficios {
     width: 500px;
     position: absolute;
@@ -703,35 +708,6 @@ body {
 .redesFooter a {
     margin-right: 50px;
 }
-
-/*.cont2Footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 15px;
-    
-}
-
-.cont2Footer h2 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
-}
-
-.empresasFooter {
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 30px;
-}
-
-.empresaFooter {
-    width: 100px;
-}
-
-.empresaFooter:hover {
-    transform: scale(1.1);
-    transition: all 0.6s;
-}*/
 
 .dispositivosFooter {
     position: absolute;
@@ -972,12 +948,13 @@ body {
     .imgsBeneficios {
         display: flex;
         flex-direction: column;
-        height: 100%;
+        overflow-x: Hidden;
     }
 
     .imagenBeneficios {
         width: 400px;
         position: absolute;
+        overflow-x: Hidden;
     }
 
     #imgBeneficio1{
@@ -999,7 +976,7 @@ body {
     /*sectionVideos*/
 
     .sectionVideos {
-        margin-top: 500px;
+        margin-top: 100px;
     }
 
     .sectionVideos iframe{
@@ -1022,6 +999,9 @@ body {
 }
 
 @media (max-width: 945px) {
+    .data-aos {
+        display: none;
+    }
     /*Header responsive*/
     .navigation {
         display: none;
@@ -1094,6 +1074,9 @@ body {
         cursor: pointer;
         font-size: large;
     }
+
+    /*Videos*/
+    
 }
 
 @media (max-width: 840px) {
